styles.css
/* ... */
        .homeIconSVGPath {
            fill: #fff;
        }

        .homeIconSVGPath:hover {
            fill: #B5DFE0;
        }

        .navWrapper {
            align-self: right;
        }

        .text-navWrapper {
            display: none;
        }

       

/*Menu Styles*/
    .navWrapper, .nav, .menu li {
        display: flex;
        justify-content: left;
        align-items: center;
        z-index: 2;
    }

    .nav {
        position: absolute;
        top: 0;
        right: 0;
        background-color: #212121;
        padding: none;
        border-radius: 2px;
        overflow: hidden;
        max-width: 100%;
    }

    .menu {
        position: relative;
        left: -12%;
        margin: 0;
        padding: 0;
        width: 0;
        overflow: hidden;
        display: none;
    }

    .nav input:checked ~ .menu {
        width: 100vw;
        max-width: 100%;
        display: inline-block;
    }

    .menu li {
        list-style: none;
        margin: 10px 10px 42px 0px;
        font-weight: 900;
        line-height: 1.2em;
        align-content: left;
    }

    .menu li a {
        text-decoration: none;
    }

    .menu li a:hover {
        color: #B5DFE0;
        transition: 0.1s;
        text-decoration: underline;
    }

    /*margin: 70% 0px 0px 0px;*/

    @media only screen and (min-width: 500px) {
        .nav input:checked ~ .menu {
            width: 100vw;
            max-width: 100%;
        }
        .menu li {
            list-style: none;
        }

        #menu-foot {
            width: 80%;
            margin: 40% 0px 0px 0px;
        }  

    }

/*Nav Icon*/
    .nav input {
        position: relative;
        right: 0px;
        width: 40px;
        height: 40px;
        cursor: pointer;
        opacity: 0;
    }
    
    .nav input:checked  {
        position: relative;
        height: 100vh;
        max-height: 100%;
    }

    /*.nav :not(input:checked) {
        transition: 0.35s;
    }*/

    .nav span {
        position: absolute;
        top: 20px;
        right: 10px;
        width: 30px;
        height: 3px;
        border-radius: 5px;
        background-color: #ffffff;
        pointer-events: none;
        z-index: 5;
        transition-duration: 0.5s;
    }

    .nav span:hover {
        background-color: #B5DFE0;
    }

    .nav input:checked ~ span {
        background-color: #B5DFE0;
    }

    .nav input:checked ~ span:nth-child(4) {
        transform: translateY(0) rotate(-45deg);
    }

    .nav span:nth-child(2) {
        transform: translateY(-8px);
    }

    .nav input:checked ~ span:nth-child(2) {
        transform: translateY(0) rotate(-45deg);
    }
    .nav span:nth-child(3) {
        transform: translateY(8px);
    }

    .nav input:checked ~ span:nth-child(3) {
        transform: translateY(0) rotate(45deg);
        background-color: #B5DFE0;
        z-index: 4;
    }

    .nav span:nth-child(4) {
        transform: translateY(0px);
    }

    .nav input:checked ~ span:nth-child(4) {
        transform: translateY(0) rotate(-45deg);
    }

    input:checked {
        position: absolute;
        right: -85%;
        width: 200px;
    }

/*Close Nav Icon*/

/*Tablet Breakpoint*/
 @media only screen and (min-width: 760px){

    #navTitlemob {
        display: none;
    }

    .navWrapper {
        display: none;
    }

    .nav span {
        top: 38px;
    }

    .navTitle {
        position: absolute;
        display: block;
        left: 0;
        right: 0;
        top: 0;
        margin-left: 125px;
        margin-right: auto;
        text-align: left;
        padding: 0px 0px 0px 0px;
        line-height: 0pt;
    }
}
/*Tablet Breakpoint Close*/

/*Text Nav*/
@media only screen and (min-width: 760px) {
    .text-navWrapper {
        display: block;
        position: absolute;
    }

    .text-nav {
        position: absolute;
        padding: 0px 5px 0px 0px;
        transition: 0.5s;
        border-radius: 2px;
        overflow: hidden;
    }

    .text-navWrapper, .text-nav, .textMenu {
        display: flex;
        justify-content: right;
        align-items: center;
        top: 5px;
        right: 0px;
    }

    .textMenu li {
        list-style: none;
        margin: 0 10px;
        white-space: nowrap;
    }

    .textMenu li a {
        font-weight: 900;
        transition: 0.5s;
    }

    .textMenu li a:hover {
        color: #B5DFE0;
        text-decoration: underline;
        transition: 0.1s;
    }
}
/*Text Nav Close*/
/*Menu Styles Close*/

/*Body Settings*/
    body {
        position: relative;
        font-family: 'Nunito', arial, sans-serif;
        font-weight: 400;
        font-size: 1em;
        line-height: 1.5em;
        color: #ffffff;
        background-color: #212121;
        margin: 0px 0px 0px 0px;
        min-height: 100vh;
    }

    #bodyContent {
        padding-top: 130px;
        padding-bottom: 50px;
        padding-left: 12px;
        padding-right: 12px;
    }

    a {
        color: inherit;
        background-color: inherit;
        text-decoration: inherit;
        cursor: pointer;
    }

    a:hover {
        color: inherit;
        background-color: inherit;
        text-decoration: inherit;
        cursor: pointer;
    }

    .designLink {
        text-decoration: underline;
        color: #B5DFE0;
    }

    .bodyLink {
        text-decoration: underline;
        color:#B5DFE0
    }

    .bodyLink:visited {
        color: #f0f0f0;
        text-decoration: underline;
    }

    .bodyLink:hover {
        color: #CEC177;
        text-decoration: underline;
    }

    .bodyLink:active {
        color: #800020;
        text-decoration: underline;
    }

    .hideMob {
        display: none;
    }

    h1 {
        font-weight: 900;
        font-size: 1em;
        line-height: 1.2em;
        padding: 3em 0px 1em 0px;
     }
/* ... */

